# video-sdk-u30-examples

./: CMakeLists.txt  README.md
dockerfiles/u30/on_prem/: Dockerfile.amznlinux  Dockerfile.centos  Dockerfile.ubuntu18.04  Dockerfile.ubuntu20.04  Dockerfile.ubuntu22.04
dockerfiles/u30/vt1/: Dockerfile.amznlinux_sw  Dockerfile.centos_sw  Dockerfile.ubuntu18.04_sw  Dockerfile.ubuntu20.04_sw  Dockerfile.ubuntu22.04_sw
examples/u30/ffmpeg/filters/: 01_rotate_video_10bit.sh  01_rotate_video_8bit.sh  02_logo_overlay_10bit.sh  02_logo_overlay_8bit.sh  03_crop_zoom_10bit.sh  03_crop_zoom_8bit.sh  04_multi_comp_10bit.sh  04_multi_comp_8bit.sh
examples/u30/ffmpeg/quality_analysis/: h264_ll_objective.sh  h264_ll_subjective.sh  h264_objective.sh  h264_subjective.sh  hevc_ll_objective.sh  hevc_ll_subjective.sh  hevc_objective.sh  hevc_subjective.sh  latency_test.sh  measure_vq.sh
examples/u30/ffmpeg/tutorials/: 01_ffmpeg_decode_only.sh  02_ffmpeg_encode_only_1080p.sh  03_ffmpeg_transcode_only.sh  04_ffmpeg_decode_plus_scale.sh  05_ffmpeg_encode_plus_scale_1080p.sh  06_ffmpeg_transcode_plus_scale.sh  07_ffmpeg_transcode_lowlatency.sh  08_ffmpeg_encode_only_4k.sh  09_ffmpeg_transcode_only_4k.sh  10_ffmpeg_multiple_jobs.sh  12_ffmpeg_streaming_transcode_from_file.sh  13_ffmpeg_transcode_only_split_stitch.py  14_ffmpeg_multidevice_abr_ladder.sh  15_ffmpeg_transcode_2dev_4k.sh  15_ffmpeg_transcode_2dev_4k_run_all.sh
examples/u30/gstreamer/filters/: 01_rotate_video.sh  02_logo_overlay.sh  03_crop_zoom.sh  04_multi_comp.sh
examples/u30/gstreamer/quality_analysis/: h264_ll_objective.sh  h264_ll_subjective.sh  h264_objective.sh  h264_subjective.sh  hevc_ll_objective.sh  hevc_ll_subjective.sh  hevc_objective.sh  hevc_subjective.sh  latency_test.sh  measure_vq.sh
examples/u30/gstreamer/quality_analysis/vmaf/: README.md  install_vmaf.sh
examples/u30/gstreamer/tutorials/: 01_gst_decode_only.sh  02_gst_h264_encode_only_1080p.sh  03_gst_h264_transcode_only.sh  04_gst_decode_plus_scale.sh  05_gst_encode_plus_scale_1080p.sh  06_gst_transcode_plus_scale.sh  07_gst_transcode_plus_scale_lowlatency.sh  08_gst_encode_only_4k.sh  09_gst_transcode_only_4k.sh  10_gst_multiple_jobs.sh  11_gst_ftrt_transcode_only.sh  12_gst_streaming_transcode_from_file.sh  13_gst_transcode_only_split_stitch.py  14_gst_app_transcode_plus_scale.sh  15_gst_transcode_plus_scale_la.sh
examples/u30/xma/: README.MD  README.rst
examples/u30/xma/common/src/: xlnx_xrm_utils.c
examples/u30/xma/decoder/lib/include/: xlnx_dec_common_parser.h  xlnx_dec_h264_parser.h
examples/u30/xma/decoder/lib/src/: xlnx_dec_common_parser.c  xlnx_dec_h265_parser.c
examples/u30/xma/encoder/app/include/: xlnx_encoder_app.h
examples/u30/xma/encoder/app/src/: xlnx_enc_arg_parse.c  xlnx_encoder_app.c
examples/u30/xma/encoder/lib/include/: xlnx_encoder.h
examples/u30/xma/encoder/lib/src/: xlnx_enc_xma_props.c
examples/u30/xma/introductory-apps/simple-encoder/: CMakeLists.txt  README.md  build.sh  main.cpp
examples/u30/xma/introductory-apps/simple-encoder/test/: pipe.sh
examples/u30/xma/lib-dyn-enc-params/: Makefile
examples/u30/xma/lib-dyn-enc-params/include/: xlnx_enc_dyn_params_priv.h
examples/u30/xma/reference-apps/: CMakeLists.txt
examples/u30/xma/reference-apps/decoder/lib/include/: xlnx_dec_h265_parser.h
examples/u30/xma/reference-apps/decoder/lib/src/: xlnx_dec_h264_parser.c  xlnx_decoder.c
examples/u30/xma/reference-apps/encoder/app/include/: xlnx_enc_arg_parse.h
examples/u30/xma/reference-apps/encoder/lib/include/: xlnx_enc_constants.h  xlnx_enc_xma_props.h
examples/u30/xma/reference-apps/lib-dyn-enc-params/: CMakeLists.txt  README.md
examples/u30/xma/reference-apps/lib-dyn-enc-params/include/: xlnx_enc_dyn_params.h
examples/u30/xma/reference-apps/lib-dyn-enc-params/src/: xlnx_enc_dyn_params.c
examples/u30/xma/reference-apps/transcoder/lib/include/: xlnx_decoder.h  xlnx_encoder.h  xlnx_transcoder_parser.h
examples/u30/xma/reference-apps/transcoder/lib/src/: xlnx_transcoder_parser.c
examples/u30/xma/transcoder/app/src/: xlnx_transcoder_app.c
examples/u30/xma/transcoder/lib/include/: xlnx_dec_utils.h  xlnx_transcoder_constants.h  xlnx_transcoder_xma_props.h
examples/u30/xma/transcoder/lib/src/: xlnx_dec_h264.c  xlnx_dec_hevc.c  xlnx_dec_utils.c  xlnx_decoder.c  xlnx_encoder.c  xlnx_scaler.c  xlnx_transcoder.c  xlnx_transcoder_xma_props.c
